--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "serve": "npx react-native start --reset-cache",
+    "serves": "npx react-native run-android",
     "test": "jest"
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-bootsplash": "^6.3.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
