--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
@@ -28,7 +33,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
