--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -31,7 +32,7 @@
     "react-native-svg": "^15.10.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.17"
