--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
